@@ -105,7 +105,7 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-10-20 16:39:21 L.72 '26439 T3070467983.K ~938 +----+----+----+----+----+
+     Zndex_E : //z 2015-10-23 17:30:03 L.69 '23397 T270049290 .K ~942 +----+----+----+----+----+
      TimeCnt : //z 2015-10-20 10:41:58 L.72 '47882 T3912493292.K ~54  +----+----+----+----+----+
      Reg.Cnt : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37  +----+----+----+----+----+
      #37  R+ : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37    V+.961  L+.1021 
@@ -149,7 +149,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-10-20 16:39:21 L.72 '26439 T3070467983.K ~975   R+.37   L+.1033 --+----+
+     Version : //z 2015-10-23 17:30:03 L.69 '23397 T270049290 .K ~979   R+.37   L+.1037 --+----+
      #51  V+ : //z 2015-10-19 15:59:14 L.73 '28846 T154138778 .K ~969   R+.37   L+.1027 
      #50  R+ : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~961   R+.37   L+.1022 V+.961  
      #50  V+ : //z 2015-10-14 15:40:13 L.78 '29987 T4108589834.K ~950   R+.36   L+.1006 
@@ -1031,4 +1031,9 @@ https://www.khronos.org/collada/wiki/FCollada
 
 DirectX API 记录----几个重要的结构体
 简单明了说明了几种dx中常用结构。
+
+opengl 例子
+http://ogldev.atspace.co.uk/index.html
+此例 assimp 动画
+http://ogldev.atspace.co.uk/www/tutorial38/tutorial38.html
 #endregion //z 2015-10-19 15:53:24 L.73 '29196 BG57IV3@XCL T153923189 .K.F4146951713-+----+----+
